2008-07-09  Badlop  <badlop@process-one.net>

	* src/ejabberd_config.erl (load_file): error message on sasl.log
	is not flattened (EJAB-616)

	* doc/guide.tex: mod_muc_log XMPP URI supports the updated version
	RFC 5122 (EJAB-631)
	* doc/guide.html: Likewise

2008-07-08  Badlop  <badlop@process-one.net>

	* tools/ejabberdctl: Work also when 'which' is unavailable

2008-07-08  Christophe Romain  <christophe.romain@process-one.net>

	* src/web/ejabberd_http_poll.erl: improve ip fetching patch

2008-07-07  Badlop  <badlop@process-one.net>

	* src/Makefile.in: Spool, config and log dirs: writtable by owner,
	readable by group, nothing by others (EJAB-686)
	* doc/guide.tex: New section Securing sensible files
	* doc/guide.html: Likewise

	* doc/guide.tex: Solaris Makefile install: use ginstall (thanks to
	Jonathan Auer)(EJAB-649)
	* doc/guide.html: Likewise

2008-07-03  Jerome Sautret  <jerome.sautret@process-one.net>

	* src/mod_privacy_odbc.erl: Support for privacy lists in MySQL
	(thanks to Igor Goryachev)(EJAB-538)

2008-07-03  Christophe Romain  <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Fix permission control on item
	retrieve (EJAB-453)
	* src/mod_pubsub/node_dispatch.erl: Likewise
	* src/mod_pubsub/node_buddy.erl: Likewise
	* src/mod_pubsub/node_private.erl: Likewise
	* src/mod_pubsub/node_public.erl: Likewise
	* src/mod_pubsub/node_default.erl: Likewise
	* src/mod_pubsub/node_pep.erl: Likewise
	* src/mod_pubsub/node_club.erl: Likewise
	* src/mod_pubsub/gen_pubsub_node.erl: Likewise
	* src/mod_pubsub/node.template: Likewise

	* src/mod_pubsub/mod_pubsub.erl: Allow subscriber to request specific
	items by ItemID; Allow to retrieve pubsub#title configuration (thanks
	to Kevin Crosbie); Fix forbidden result on setting
	affiliation/subscription

	* src/ejabberd_local.erl: prevent iq_response table overload
	(EJAB-608)
	* src/mod_caps.erl: Likewise

	* src/web/ejabberd_http.erl: Retrieve correct IP from http connection